--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <!--INPUT CONTAINER-->
-        <div class="input_container">
-            <input type="text" placeholder="Enter To-DO"/>
-            
-        </div>
-        
-        <!--DATA CONTAINER-->
-        <div class="data_container">
 
+<head>
+    <title>To-Do List</title>
+</head>
+<link rel="stylesheet" href="index.css">
+
+<body class="main">
+
+    <!--INPUT CONTAINER-->
+    <div class="input_container">
+
+        <input type="input" type="text" placeholder="Enter To-Do" />
+        <button class="addButton">Add</button>
+
+
+    </div>
+
+    <!--DATA CONTAINER-->
+    <div class="data_container">
+        <!--input box edit button remove button-->
+        <!-- <div class="item">
+            <input class="item_input" type="text" disabled>
+            <button class="editButton">Edit</button>
+            <button class="removeButton">Remove </button>
         </div>
-    </body>
+
+        <div class="item">
+            <input class="item_input" disabled>
+            <button class="editButton">Edit</button>
+            <button class="removeButton">Remove </button>
+        </div>
+        <div class="item">
+            <input class="item_input" disabled>
+            <button class="editButton">Edit</button>
+            <button class="removeButton">Remove </button>
+        </div> -->
+    </div>
+    <script src="index.js"></script>
+</body>
+
 </html>
